# new-data-upa-dashboard-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  swagger.yaml
ml_models_api/: Dockerfile  requirements.txt
ml_models_api/app/: main.py
ml_models_api/app/controllers/: prediction_controller.py
ml_models_api/app/models/: model.py
ml_models_api/app/routes/: prediction_route.py
ml_models_api/app/services/: prediction_service.py
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/machine_information/: mod.rs  system_metrics.rs
src/adapters/password/: encryptor.rs  mod.rs  pronto_password.rs
src/adapters/token/: generate_token.rs  jwt.rs  mod.rs
src/application/: auth_pronto_service.rs  auth_service.rs  data_upa_service.rs  information_service.rs  machine_information_service.rs  mod.rs  prediction_service.rs  update_graph_data_service.rs  user_service.rs  visualization_data_service.rs
src/domain/: mod.rs
src/domain/email/: email_service.rs
src/domain/models/: audit.rs  auth.rs  auth_pronto.rs  data_upa.rs  machine_information.rs  mod.rs  prediction.rs  user.rs  visualization_data_graph.rs
src/domain/repositories/: audit.rs  auth_pronto.rs  data_upa.rs  mod.rs  user.rs
src/handlers/: mod.rs
src/handlers/auth/: auth_handler.rs  mod.rs  pronto_auth_handler.rs
src/handlers/data/: data_upa_handler.rs  mod.rs  update_graph_data_handler.rs  visualization_data_handler.rs
src/handlers/information/: information_handler.rs  mod.rs
src/handlers/machine_information/: machine_information_handler.rs  mod.rs
src/handlers/prediction/: mod.rs  prediction_handler.rs
src/handlers/user/: user_handler.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/email/: email_service.rs
src/infrastructure/repositories/: audit_repository.rs  auth_pronto_repository.rs  data_upa_repository.rs  mod.rs  user_repository.rs
src/middleware/: audit.rs  auth.rs  logging.rs  mod.rs
src/routes/: auth.rs  data_upa.rs  information.rs  machine_information.rs  mod.rs  prediction.rs  swagger.rs  users.rs
src/routes/config/: routes.rs
src/utils/: config_env.rs  error.rs  feedbacks_processing.rs  graph_data_processing.rs  mod.rs  process_data.rs  response.rs  validators.rs
