[package]
name = "new-data-upa-dashboard-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "new-data-upa-dashboard-api"
path = "src/main.rs"

[dependencies]
# Framework web
actix-web = "4.4.1"
actix-cors = "0.7.0"

# Serialização/Deserialização
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Runtime assíncrono
tokio = { version = "1.36.0", features = ["full"] }

# Banco de dados
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "tls-native-tls", "chrono", "runtime-tokio", "tls-rustls"] }

# Utilitários
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
thiserror = "1.0.57"
jsonwebtoken = "9.2.0"

# Logging
log = "0.4.20"
env_logger = "0.11.1"

# Futures e tempo
futures = "0.3.30"
time = { version = "0.3.34", features = ["formatting"] }
argon2 = { version = "0.5.3", features = ["std"] }
derive_more = "0.99.17"

# Validação de e-mail
regex = "1.10.2"
lazy_static = "1.4.0"

chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
rand = "0.8.5"

# machine information

sysinfo = { version = "0.33.1", features = ["disk"] }

num_cpus = "1.15"

# libs to login pronto
tiberius = { version = "0.12.3", features = ["chrono", "tds73"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
md5 = "0.7.0"


# process data upa
polars = { version = "0.46", features = ["lazy", "csv", "temporal", "regex", "strings", "dtype-array"] }
linfa = "0.6.1"
linfa-clustering = "0.6.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
rust-stemmers = "1.2.0"
stop-words = "0.7.2"
tokenizers = "0.13.4"
rand_xoshiro = "0.6.0"  
tempfile = "3.19.1"
actix-multipart = "0.7.2"
